moved data into separate folder

--- a/public/projects.html
+++ b/public/projects.html
@@ -113,7 +113,7 @@
 
 </body>
 
-<script src="projectsData.js"></script>
+<script src="data/projectsData.js"></script>
 <script src="projects.js"></script>
 <script src="lib/servicebars.js"></script>
 
