started building data files, using dom manipulation for speed

--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@
 
 <div class="jumbotron">
   <div class="container text-center">
-    <h1>Stephen Shilale</h1>      
-    <h2>Full Stack Web Developer</h2>
+    <h1 id="page-title__name"></h1>      
+    <h2 id="page-title__tagline"></h2>
 	<div class="container-fluid bg-3 text-center">
 		<a href="http://github.com/sshilal1"><img class="logo-sprite" style="filter: grayscale(1) invert(1);" src="images/github-sprite.png"></a>
 		<a href="https://www.linkedin.com/in/stephen-shilale-10237169"><img class="logo-sprite" src="images/linkedin-sprite.png"></a>
@@ -96,6 +96,9 @@
 	<h4>2017</h4>
   </div>
 </div>
+
+<script src="data/about.js"></script>
+<script src="main.js"></script>
 
 </body>
 </html>
