moved more files around

--- a/public/about.html
+++ b/public/about.html
@@ -50,7 +50,7 @@
 		I also pioneered a new method of testing Crestron products through web requests, which is now used across the company. I have always been eager to bring my love of web development to work related issues.</p>
 		
 		<p class="lead">Being a test engineer for the past 3 years at crestron has made test-driven development my mantra, and I brought that style of coding to all of my web development projects.</p>
-		<p class="lead">Read more about my work by checking out my <a href="Resume_Stephen_Shilale.pdf">Resume</a></p>
+		<p class="lead">Read more about my work by checking out my <a href="images/Resume_Stephen_Shilale.pdf">Resume</a></p>
 		
 		<img src="images/self3.jpg" style="width: 200px; border-radius: 10px;">
 		
