--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
 </div>
 
 <script src="data/about.js"></script>
-<script src="main.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
