--- a/public/projects.html
+++ b/public/projects.html
@@ -114,7 +114,7 @@
 </body>
 
 <script src="data/projects.js"></script>
-<script src="projects.js"></script>
+<script src="js/projects.js"></script>
 <script src="lib/servicebars.js"></script>
 
 </html>
