added copyright footer

--- a/public/index.html
+++ b/public/index.html
@@ -92,8 +92,8 @@
 
 <div class="jumbotron" style="margin: 0;">
   <div class="container text-center">
-	<h4><span class="glyphicon glyphicon-copyright-mark"></span> Stephen Shilale</h4>
-	<h4>2017</h4>
+	<h4 id="footer-name"></h4>
+	<h4 id="footer-year"></h4>
   </div>
 </div>
 
