--- a/public/about.html
+++ b/public/about.html
@@ -34,7 +34,7 @@
 				<li><a href="/">Home</a></li>
 				<li><a href="projects">Projects</a></li>
 				<li class="active"><a href="about">About</a></li>
-				<li><a href="blog">Blog</a></li>
+				<!-- <li><a href="blog">Blog</a></li> -->
 			</ul>
 		</div>
 	</div>
