--- a/public/about.html
+++ b/public/about.html
@@ -32,8 +32,8 @@
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			<ul class="nav navbar-nav">
 				<li><a href="/">Home</a></li>
-				<li><a href="projects">Projects</a></li>
-				<li class="active"><a href="about">About</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li class="active"><a href="about.html">About</a></li>
 				<!-- <li><a href="blog">Blog</a></li> -->
 			</ul>
 		</div>
