--- a/public/projects.html
+++ b/public/projects.html
@@ -38,10 +38,10 @@
 						<a href="/">Home</a>
 					</li>
 					<li class="active">
-						<a href="projects">Projects</a>
+						<a href="projects.html">Projects</a>
 					</li>
 					<li>
-						<a href="about">About</a>
+						<a href="about.html">About</a>
 					</li>
 					<!-- <li>
 						<a href="blog">Blog</a>
